# vibe-chj-demo

./: .gitignore  MEMORY.md  README.md  tailwind.config.js
.cursor/skills/: SKILL.md
FDE-workspace- template/: AGENTS.md  MEMORY.md
FDE-workspace- template/.cursor/skills/agent-design/templates/agent-artifact/: README.md  artifact.json  pyproject.toml
FDE-workspace- template/.cursor/skills/agent-design/templates/agent-artifact/src/my_agent/: __init__.py  my_agent.md  my_agent.yaml
FDE-workspace- template/.cursor/skills/agent-design/templates/agent-artifact/tests/: __init__.py  test_agent.py
FDE-workspace- template/.cursor/skills/agent-design/templates/tool-artifact/: README.md  artifact.json  pyproject.toml
FDE-workspace- template/.cursor/skills/agent-design/templates/tool-artifact/src/my_tool/: __init__.py
FDE-workspace- template/.cursor/skills/agent-design/templates/tool-artifact/src/my_tool/my_tool/: __init__.py  my_tool.py  tool.yaml
FDE-workspace- template/.cursor/skills/agent-design/templates/tool-artifact/tests/: __init__.py  test_my_tool.py
FDE-workspace- template/docs/: demo问题深度分析.md
FDE-workspace-漕河泾/: DEPLOY.md  MEMORY.md  README.md  TROUBLESHOOTING.md  VERCEL_SETUP.md  package-lock.json  pnpm-lock.yaml  vercel.json
FDE-workspace-漕河泾/src/: index.css
design-system/漕河泾驾驶舱/: MASTER.md
doc/: DESIGN_v2_xiaobei_openclaw_merge.md  DESIGN_v3_openclaw_as_core.md  DESIGN_v4_local_client.md  DESIGN_v5_xiaobei_agent_openclaw_executor.md  DESIGN_xiaobei_openclaw_integration.md  INTEGRATION_ANALYSIS.md
docs/: README.md  UI规范对照表.md  UI规范快速实施指南.md  UI规范统一深度分析.md  UI重构完成报告.md  UI重构成果.md  UI重构进度.md  UI重构阶段1完成总结.md  UI重构阶段总结.md  布局统一化改造记录.md  深度分析-v2-设计偏离根因.md  深度分析-v3-业务流程与架构重构.md  深度分析-架构与UX问题.md
memory/: 2026-02-09.md
src/: index.css
src/lib/: schema.ts
(+230 files in other folders)
