[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-agent"
version = "1.0.0"
description = "Agent 的简短描述"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nexau",
    "my-common",
    "pytest>=7.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/artifact.json",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
